--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Muvie</title>
+    <title>VISUALZ</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Load Stripe.js on your website. -->
+    <script src="https://js.stripe.com/v3"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
