--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <!-- Load Stripe.js on your website. -->
     <script src="https://js.stripe.com/v3"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -18,6 +19,17 @@
 
 <body>
     <app-root></app-root>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143020978-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-143020978-1');
+    </script>
+
 </body>
 
 </html>
