--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="VISUALZ for DJS. Realtime Audio-Responsive visual composition tool for DJs, VJs, Artists, and Venues." />
+    <meta name="keywords"
+        content="DJ Visuals, DJ Visual Software, DJ Visuals FREE, Concert Visuals, Audio-Responsive Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
+    <meta name="author" content="Karl Steltenpohl">
 
     <!-- Load Stripe.js on your website. -->
     <script src="https://js.stripe.com/v3"></script>
