--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>VISUALZ</title>
+    <title>VISUALZ - Reltime Audio-Responsive Visuals</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +24,14 @@
 
 <body>
     <app-root></app-root>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143020978-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-143020978-1');
+    </script>
 </body>
 
 </html>
