--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-        content="VISUALZ for DJS. Realtime Audio-Responsive visual composition tool for DJs, VJs, Artists, and Venues." />
+    <meta name="description" content="VISUALZ for DJS. Audio-Responsive visuals free and paid." />
     <meta name="keywords"
         content="DJ Visuals, DJ Visual Software, DJ Visuals FREE, Concert Visuals, Audio-Responsive Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
     <meta name="author" content="Karl Steltenpohl">
