--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>VISUALZ - Reltime Audio-Responsive Visuals</title>
+    <title>VISUALZ - Visuals For DJs - Realtime Audio-Responsive Visuals</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="VISUALZ for DJS. Audio-Responsive visuals free and paid." />
+    <meta name="description" content="VISUALZ - Visuals For DJs - Realtime Audio-Responsive Visuals free and paid." />
     <meta name="keywords"
         content="DJ Visuals, DJ Visual Software, DJ Visuals FREE, Concert Visuals, Audio-Responsive Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
     <meta name="author" content="Karl Steltenpohl">
