--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>VISUALZ - Visuals For DJs - Realtime Audio-Responsive Visuals</title>
+    <title>VISUALZ - Visuals For DJs - Realtime Audio-Reactive Visuals</title>
     <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="VISUALZ - Visuals For DJs - Realtime Audio-Responsive Visuals free and paid." />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="VISUALZ - Visuals For DJs - Realtime Audio-Reactive Visuals free and paid." />
     <meta name="keywords"
-        content="DJ Visuals, DJ Visual Software, DJ Visuals FREE, Concert Visuals, Audio-Responsive Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
+        content="DJ Visuals, DJ Visual Software, DJ lighting software, DJ Visuals FREE, Concert Visuals, Audio-Reactive, Autdio-Responsive, Responsive, Reactive, Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
     <meta name="author" content="Karl Steltenpohl">
 
     <!-- Load Stripe.js on your website. -->
