--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="VISUALZ - Visuals For DJs - Realtime Audio-Reactive Visuals free and paid." />
+    <meta name="description" content="VISUALZ - Visuals For DJs - Free Realtime Audio-Reactive Visuals Software." />
     <meta name="keywords"
         content="DJ Visuals, DJ Visual Software, DJ lighting software, DJ Visuals FREE, Concert Visuals, Audio-Reactive, Autdio-Responsive, Responsive, Reactive, Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
     <meta name="author" content="Karl Steltenpohl">
