--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 <body>
     <app-root></app-root>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="https://cdn.auth0.com/js/lock/10.10/lock.min.js"></script>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143020978-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
