--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>VISUALZ - Visuals For DJs - Realtime Audio-Reactive Visuals</title>
+    <title>VISUALZ - Realtime Audio Reactive Visuals For VJs, DJs, Bands, Artists, Live Streams, Events, and Venues
+    </title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="VISUALZ - Visuals For DJs - Free Realtime Audio-Reactive Visuals Software." />
+    <meta name="description"
+        content="VISUALZ - Realtime Audio Reactive Visuals For VJs, DJs, Bands, Artists, Live Streams, Events, and Venues" />
     <meta name="keywords"
-        content="DJ Visuals, DJ Visual Software, DJ lighting software, DJ Visuals FREE, Concert Visuals, Audio-Reactive, Autdio-Responsive, Responsive, Reactive, Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
+        content="Live Stream Visuals, Livestream Visuals, Live Visuals, Stream Visuals, Event Visuals, Vj Visuals, How To VJ, DJ Visuals, DJ Visual Software, DJ lighting software, DJ Visuals FREE, Concert Visuals, Audio-Reactive, Autdio-Responsive, Audio Responsive, Audio Reactive, Responsive, Reactive, Visuals, Music Visuals, Show Visuals, Light Show, Lightshow">
     <meta name="author" content="Karl Steltenpohl">
 
     <!-- Load Stripe.js on your website. -->
