--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <!-- Load Stripe.js on your website. -->
     <script src="https://js.stripe.com/v3"></script>
 
-    <link rel="icon" type="image/x-icon" href="logo_2021_16.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- start Mixpanel -->
